--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,10 @@
   }
 } */
 
+/* button, [type='button'], [type='reset'], [type='submit'] {
+  background-color: transparent;
+} */
+
 body {
   color: rgb(var(--foreground-rgb));
   /* background: linear-gradient(
